samples/_failures_safe/1761004802_93cf29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7304f2c.c: In function ‘main’:
./samples/SAFE/__tmp_d7304f2c.c:148:5: error: expected expression at end of input
  148 |     size_t decompressed_size =
      |     ^~~~~~
./samples/SAFE/__tmp_d7304f2c.c:148:5: error: expected declaration or statement at end of input
